--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "declaration": false,
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
+	  "experimentalDecorators": true,
     "target": "es5",
     "typeRoots": [
       "node_modules/@types"
@@ -15,6 +15,7 @@
     "lib": [
       "es2016",
       "dom"
-    ]
+    ],    
+    "allowJs":true
   }
 }
